# EntropyVerify

./: .gitignore  LICENSE  README.md
entropy_verify/: Cargo.toml  README.md  build.rs
entropy_verify/.cargo/: config.toml
entropy_verify/src/: app.rs  config.rs  main.rs  units.rs
entropy_verify/src/crypto/: datagen.rs  hasher.rs  mod.rs
entropy_verify/src/engine/: block.rs  mod.rs  verifier.rs  writer.rs
entropy_verify/src/engine/io/: aligned.rs  linux.rs  mod.rs  windows.rs
entropy_verify/src/report/: markdown.rs  mod.rs
entropy_verify/src/safety/: guardrails.rs  mod.rs  platform.rs
entropy_verify/src/threading/: affinity.rs  mod.rs
entropy_verify/src/tui/: dashboard.rs  drive_selection.rs  events.rs  mod.rs  widgets.rs
